Fixing overview pages alignment issues

--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -1015,6 +1015,9 @@ a.btn-action {
 .app-content-section {
     margin-top: 105px;
 }
+.app-overview-section {
+    margin-top: 85px;
+}
 .app-list {
     padding-bottom: 100px;
 }
